--- a/quiz/m2_advanced_quants/l5_volatility/rolling_windows.ipynb
+++ b/quiz/m2_advanced_quants/l5_volatility/rolling_windows.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os,sys\n",
+    "repo_dir = os.path.dirname(os.path.dirname(os.path.dirname(os.getcwd())))\n",
+    "if sys.path[0]!=repo_dir:\n",
+    "    sys.path.insert(0,repo_dir)\n",
+    "#import tests"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -16,9 +29,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2018-10-10     0\n",
+       "2018-10-11     1\n",
+       "2018-10-12     2\n",
+       "2018-10-13     3\n",
+       "2018-10-14     4\n",
+       "2018-10-15     5\n",
+       "2018-10-16     6\n",
+       "2018-10-17     7\n",
+       "2018-10-18     8\n",
+       "2018-10-19     9\n",
+       "2018-10-20    10\n",
+       "Freq: D, dtype: int32"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -44,9 +79,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Rolling [window=3,center=False,axis=0]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "close.rolling(window = 3)"
    ]
@@ -60,9 +106,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2018-10-10     NaN\n",
+       "2018-10-11     NaN\n",
+       "2018-10-12     3.0\n",
+       "2018-10-13     6.0\n",
+       "2018-10-14     9.0\n",
+       "2018-10-15    12.0\n",
+       "2018-10-16    15.0\n",
+       "2018-10-17    18.0\n",
+       "2018-10-18    21.0\n",
+       "2018-10-19    24.0\n",
+       "2018-10-20    27.0\n",
+       "Freq: D, dtype: float64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "close.rolling(window = 3).sum()"
    ]
@@ -83,9 +151,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2018-10-10    NaN\n",
+       "2018-10-11    NaN\n",
+       "2018-10-12    0.0\n",
+       "2018-10-13    1.0\n",
+       "2018-10-14    2.0\n",
+       "2018-10-15    3.0\n",
+       "2018-10-16    4.0\n",
+       "2018-10-17    5.0\n",
+       "2018-10-18    6.0\n",
+       "2018-10-19    7.0\n",
+       "2018-10-20    8.0\n",
+       "Freq: D, dtype: float64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "close.rolling(window = 3).min()"
    ]
@@ -112,9 +202,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "import quiz_tests\n",
     "\n",
@@ -136,7 +234,7 @@
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
     "    \n",
-    "    return None\n",
+    "    return close.rolling(rolling_window).mean()\n",
     "\n",
     "\n",
     "quiz_tests.test_calculate_simple_moving_average(calculate_simple_moving_average)"
@@ -153,9 +251,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "aitnd",
    "language": "python",
-   "name": "python3"
+   "name": "aitnd"
   },
   "language_info": {
    "codemirror_mode": {
@@ -167,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
