--- a/quiz/m3_funds_etfs_portfolio_optimization/l4_portfolio_optimization/m3l4_cvxpy_advanced.ipynb
+++ b/quiz/m3_funds_etfs_portfolio_optimization/l4_portfolio_optimization/m3l4_cvxpy_advanced.ipynb
@@ -16,12 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "!{sys.executable} -m pip install -r requirements.txt"
+    "import os,sys\n",
+    "repo_dir = os.path.dirname(os.path.dirname(os.path.dirname(os.getcwd())))\n",
+    "if sys.path[0]!=repo_dir:\n",
+    "    sys.path.insert(0,repo_dir)"
    ]
   },
   {
@@ -33,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,9 +129,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "import cvxpy as cvx\n",
     "import numpy as np\n",
@@ -161,30 +171,32 @@
     "    # that minimizes the combination of portfolio variance and distance from index weights\n",
     "    \n",
     "    # number of stocks m is number of rows of returns, and also number of index weights\n",
-    "    #m = \n",
+    "    m = len(index_weights)\n",
     "    \n",
     "    #covariance matrix of returns\n",
-    "    #cov = \n",
+    "    cov = np.cov(returns)\n",
     "    \n",
     "    # x variables (to be found with optimization)\n",
-    "    #x = \n",
+    "    x = cvx.Variable(m)\n",
     "    \n",
     "    #portfolio variance, in quadratic form\n",
-    "    #portfolio_variance = \n",
+    "    portfolio_variance = cvx.quad_form(x,cov)\n",
     "    \n",
     "    # euclidean distance (L2 norm) between portfolio and index weights\n",
-    "    #distance_to_index = \n",
+    "    distance_to_index = cvx.norm(x-index_weights)\n",
     "    \n",
     "    #objective function\n",
-    "    #objective = \n",
+    "    objective = cvx.Minimize(portfolio_variance + scale * distance_to_index)\n",
     "    \n",
     "    #constraints\n",
-    "    #constraints = \n",
+    "    constraints = [x>=0,sum(x)==1]\n",
     "\n",
     "    #use cvxpy to solve the objective\n",
+    "    prob = cvx.Problem(objective,constraints)\n",
+    "    prob.solve()\n",
     "    \n",
     "    #retrieve the weights of the optimized portfolio\n",
-    "    #x_values\n",
+    "    x_values = x.value\n",
     "    \n",
     "    return x_values\n",
     "\n",
@@ -193,9 +205,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The optimized weights are [0.86726546 0.11647636 0.01625818], which sum to 1.00\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"Test with a 3 simulated stock return series\"\"\"\n",
     "days_per_year = 252\n",
@@ -227,9 +247,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "aitnd",
    "language": "python",
-   "name": "python3"
+   "name": "aitnd"
   },
   "language_info": {
    "codemirror_mode": {
@@ -241,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
