--- a/quiz/m3_funds_etfs_portfolio_optimization/l4_portfolio_optimization/m3l4_cvxpy_basic.ipynb
+++ b/quiz/m3_funds_etfs_portfolio_optimization/l4_portfolio_optimization/m3l4_cvxpy_basic.ipynb
@@ -16,12 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "!{sys.executable} -m pip install -r requirements.txt"
+    "import os,sys\n",
+    "repo_dir = os.path.dirname(os.path.dirname(os.path.dirname(os.getcwd())))\n",
+    "if sys.path[0]!=repo_dir:\n",
+    "    sys.path.insert(0,repo_dir)"
    ]
   },
   {
@@ -33,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,9 +124,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "import cvxpy as cvx\n",
     "import numpy as np\n",
@@ -155,32 +165,32 @@
     "    # TODO: Use cvxpy to determine the weights on the assets in a 2-asset\n",
     "    # portfolio that minimize portfolio variance.\n",
     "    \n",
-    "    #cov = \n",
-    "    \n",
-    "    # x = \n",
-    "    \n",
-    "    # P = \n",
-    "    \n",
-    "    #objective = \n",
-    "    \n",
-    "    # constraints = \n",
-    "    \n",
-    "    # problem = \n",
-    "    \n",
-    "    #min_value = \n",
-    "    # xA,xB = \n",
-    "    \n",
-    "    # return xA and xB\n",
-    "    return\n",
+    "    cov = np.sqrt(varA*varB)*rAB   \n",
+    "    x = cvx.Variable(2)    \n",
+    "    P = cvx.quad_form(x,[[varA,cov],[cov,varB]] )    \n",
+    "    objective = cvx.Minimize(P)    \n",
+    "    constraints = [x>=0,x[0]+x[1]==1]    \n",
+    "    problem = cvx.Problem(objective,constraints)    \n",
+    "    min_value = problem.solve()\n",
+    "    return tuple(x.value)\n",
     "\n",
     "quiz_tests.test_optimize_twoasset_portfolio(optimize_twoasset_portfolio)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Weight on Stock A: 0.281935\n",
+      "Weight on Stock B: 0.718065\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"Test run optimize_twoasset_portfolio().\"\"\"\n",
     "xA,xB = optimize_twoasset_portfolio(0.1, 0.05, 0.25)\n",
@@ -198,9 +208,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "aitnd",
    "language": "python",
-   "name": "python3"
+   "name": "aitnd"
   },
   "language_info": {
    "codemirror_mode": {
@@ -212,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
