--- a/quiz/m4_multifactor_models/m4l3/zscore.ipynb
+++ b/quiz/m4_multifactor_models/m4l3/zscore.ipynb
@@ -416,9 +416,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env_p4",
+   "display_name": "aitnd",
    "language": "python",
-   "name": "env_p4"
+   "name": "aitnd"
   },
   "language_info": {
    "codemirror_mode": {
@@ -430,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
